<resources>
    <string name="app_name">Carrot Killer</string>
    <string name="button">Button</string>
    <string name="imagen">Image</string>
    <string name="have_you_been_murdered">Have you been murdered?</string>
    <string name="introduce_the_killer_s_code">Introduce the killer\'s code:</string>
    <string name="you_have_been_slayed">You have been slayed</string>
    <string name="back_to_game">Back to game</string>
    <string name="your_final_score_is">Your final score is:</string>
    <string name="todo">TODO</string>
    <string name="Code_not_valid_try_again">This code is not valid. Try again</string>
    <string name="victim_s_profile">Victim\'s Profile</string>
    <string name="information">Information</string>
    <string name="kill">Kill</string>
    <string name="sign_in">Sign in</string>
    <string name="did_you_killed_your_victim">Did you killed your victim?</string>
    <string name="execute">EXECUTE</string>
    <string name="my_profile">My Profile</string>
    <string name="change_information">Change information</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="code_number">XXXX</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat password</string>
    <string name="go_to_game">go to game</string>
    <string name="players_left">Players left</string>
    <string name="xxx">XXX</string>
    <string name="x">X</string>
    <string name="time_left">Time left</string>
    <string name="initial_players">Initial players</string>
    <string name="xx">XX</string>
    <string name="current_position">Current position</string>
    <string name="number_of_kills">Number of kills</string>
    <string name="xxxx">XXXX</string>
    <string name="player_most_kills">Player most kills</string>
    <string name="xxxxx">XXXXX</string>
    <string name="statistics">STATISTICS</string>
    <string name="xxxxxx">XXX</string>
    <string name="go_to_menu">go to menu</string>
    <string name="name">NAME</string>
    <string name="current_carrot_killer_game">Current Carrot Killer Game</string>
    <string name="time_left_name">Time left</string>
    <string name="hours_min">HOURS MIN</string>
    <string name="my_profile_info">my profile info</string>
    <string name="statistics_name">STATISTICS</string>
    <string name="i_ve_been_killed">I\'ve been killed</string>
    <string name="my_victim_profile">MY VICTIM PROFILE</string>
    <string name="menu">MENU</string>
    <string name="my_profile_name">my Profile</string>
    <string name="new_game">new game</string>
    <string name="join_game">join game</string>
    <string name="continue_game">continue game</string>
    <string name="game_name">GAME Name</string>
    <string name="submit">Submit!</string>
    <string name="create_new_carrot_killer_game">Create new Carrot Killer game</string>
    <string name="ex_dd_mm_yyyy">Ex. dd/mm/yyyy</string>
    <string name="ex_h_min">Ex. h:min</string>
    <string name="ex_dd_mm_yyyy2">Ex. dd/mm/yyyy</string>
    <string name="final_date">Final date</string>
    <string name="ex_h_min2">Ex. h:min</string>
    <string name="initial_date">Initial date</string>
    <string name="cancel_new">Cancel</string>
    <string name="new_victim">NEW VICTIM</string>
    <string name="celebration_photo">Celebration Photo</string>
    <string name="nice_kill">NICE KILL</string>
    <string name="congrats">CONGRATS!!!</string>
    <string name="current_kills">Current kills</string>
    <string name="cur_kill_num">X</string>
    <string name="error_page">ERROR PAGE</string>
    <string name="we_are_sorry_an_error_has_occured">We are sorry! An error has occured.</string>
    <string name="go_to_menu2">go to menu</string>
    <string name="go_to_menu_gameresults">go to menu</string>
    <string name="game_results">GAME RESULTS</string>
    <string name="xxx_time_duration">XXX</string>
    <string name="time_duration">Time duration</string>
    <string name="xxx_ini_play">XXX</string>
    <string name="podium">Podium</string>
    <string name="xxx_play_left">XXX</string>
    <string name="initial_players_gameresult">Initial players</string>
    <string name="players_left_gameresults">Players left</string>
    <string name="xxx_your_kills">XXX</string>
    <string name="your_kills">YOUR kills</string>
    <string name="xxx_play_most_kills">XXX</string>
    <string name="player_most_kills_game_results">Player most kills</string>
    <string name="xxx_total_kills">XXX</string>
    <string name="total_kills">Total kills</string>
    <string name="podium_photo">Podium Photo</string>
    <string name="xxx_first_play">XXX</string>
    <string name="xxx_second_play">XXX</string>
    <string name="xxx_third_play">XXX</string>
    <string name="submit_join">Submit!</string>
    <string name="cancel_join">Cancel</string>
    <string name="game_code">GAME CODE</string>
    <string name="join_a_carrot_killer_game">Join a Carrot Killer game</string>
    <string name="go_to_menu_notstartedgame">go to menu</string>
    <string name="the_carrot_killer_game">The Carrot Killer Game</string>
    <string name="hasn_t_began_yet">hasn\'t began yet</string>
    <string name="it_will_begin_in">It will begin in</string>
    <string name="name_not_started">NAME</string>
    <string name="hours_and_minuts">hours and minuts</string>
    <string name="back_to_victim_s_profile">Back to victim\'s profile</string>
    <string name="try_another_code">Try another code</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="save">Save</string>
    <string name="cancel_change_profile">Cancel</string>
    <string name="select_initial_date_and_time">SELECT INITIAL DATE AND TIME</string>
    <string name="select_final_date_and_time">SELECT FINAL DATE AND TIME</string>
    <string name="select_initial_date">SELECT INITIAL DATE</string>
    <string name="select_final_date">SELECT FINAL DATE</string>
    <string name="select_initial_time">SELECT INITIAL TIME</string>
    <string name="select_final_time">SELECT FINAL TIME</string>
    <string name="date">Date</string>
    <string name="share_button">share_button</string>
    <string name="chuck_norris_facts">Chuck Norris facts</string>
    <string name="confirm">Confirm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="victim_fragment">Victim fragment</string>
    <string name="menu_fragment">Menu fragment</string>
    <string name="log_out">Log out</string>
    <string name="additional_info">Additional info</string>
    <string name="surname">Surname</string>
    <string name="log_out_icon">Log out</string>
    <string name="create_an_account">Create an account</string>
</resources>