<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Carrot"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/murderedText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/have_you_been_murdered"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/codeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/murderedText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/introduce_the_killer_s_code"
        android:textSize="15sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/codeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5sp"
        android:autofillHints="0000"
        android:inputType="number"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/code_number"
        android:textSize="35sp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TextContrastCheck" />

    <Button
        android:id="@+id/exec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:padding="20sp"
        android:text="@string/execute"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/backGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30sp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/back_to_game"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:ignore="TextContrastCheck"
        tools:text="Back to menu" />

</RelativeLayout>