<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Carrot"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/myProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:gravity="center"
            android:text="@string/my_profile"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_below="@+id/myProfile"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_image_24" />

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/photo"
            android:layout_marginStart="30sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="30sp"
            android:layout_marginBottom="20sp"
            android:background="@color/light_orange"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/information"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="50sp"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/change_information"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/backMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30sp"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/back_to_game"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck"
            tools:text="back" />
    </RelativeLayout>
</ScrollView>