<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Carrot"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/victimProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/victim_s_profile"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@drawable/ic_baseline_image_24"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/victimProfile"
            android:contentDescription="@string/victim_s_profile" />

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/photo"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@color/light_orange"
            android:gravity="center"
            android:text="@string/information"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/kill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="50sp"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/kill"
            android:textColor="@color/black"
            android:textSize="17sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/backMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30sp"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/back_to_menu"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck" />
    </RelativeLayout>
</ScrollView>